# co2-flux-hourly-gpp-modeling

./: .gitignore  README.md
code/: pyproject.toml  requirements.txt  requirements_3_9.txt  setup_conda.sh  setup_conda_3_9.sh  setup_conda_for_nb_instance.sh
code/src/: EDA.ipynb
code/src/EDA/: Correlogram.ipynb  data_full_half_hourly_EDA.Rmd  data_monthly_v1_0_EDA.Rmd  extreme_events.ipynb  extreme_events.py  extreme_events_1site.ipynb  fluxnet_subset.ipynb  get-site-metadata-from-google-drive-files.ipynb  get-site-metadata-from-hourly-data.ipynb  get_site_metadata.ipynb  gold-sample-site-trim-eda.ipynb  gpp_contribution.ipynb  gpp_contribution.py  gpp_contribution_1site.ipynb  monthly-data-selection-v2.ipynb  monthly-data-selection.ipynb  quantify_gaps.ipynb  quantify_gaps_1site.ipynb  run_eda_jc.sh  test-sties-selection_v0.ipynb
code/src/analysis/: 0_interpretability_base.ipynb  1_performance_metrics_by_groups.ipynb  2_feature_imp_attention_by_groups.ipynb  3_Interpretability_by_feature.ipynb  4_1_Interpretability_by_feature_base.ipynb  4_2_Interpretability_by_feature_GPPTFT_14day.ipynb  4_3_Interpretability_by_feature_noGPP.ipynb  4_4_Interpretability_by_feature_noGPPTFT_7day_full_features.ipynb  4_Interpretability_by_feature.ipynb  5_Interpretability_by_feature.ipynb  5_encoder_len_attn.ipynb  RFR_CV_dimensionality_reduction_v1.ipynb  encoder_variables_study.ipynb  feature_importance_plot_with_plotly.ipynb  nogpp_tft_eval_experiments-exp4.ipynb  nogpp_tft_eval_experiments.ipynb
code/src/modeling/: 0.mvp_tft_baseline_evals.ipynb  1.mvp_tft_custom_gelu.py  1.mvp_tft_hyperparam_tuning.py  1.mvp_tft_hyperparam_tuning_evals.ipynb  1.mvp_tft_hyperparam_tuning_evals_custom_gelu.ipynb  1.mvp_tft_hyperparam_tuning_evals_custom_swish.ipynb  10_tft_nogpp_5Y_5D_smallnet_slimfeatures.py  11_tft_nogpp_5Y_10D_smallnet_slimfeatures.ipynb  11_tft_nogpp_5Y_10D_smallnet_slimfeatures.py  12_1_evals.ipynb  12_1_gap_fill_knn_smallnet.py  12_1_gap_fill_knn_smallnet_evals.ipynb  12_2_evals.ipynb  12_2_gap_fill_tft_smallnet.py  13_1_evals.ipynb  13_1_yes_koppen_sub.py  13_2_evals.ipynb  13_2_no_koppen_sub.py  14_1_tft_nogpp_5Y_3D_smallnet_slim.py  14_2_2_tft_nogpp_5Y_7D_smallnet_slim_groupnorm.py  15_evals.ipynb  (+85 more)
(+617 files in other folders)
