[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jcalz23 <j.calzaretta.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.1"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"
google = "^3.0.0"
google-api-python-client = "^2.75.0"
google-auth-oauthlib = "^0.8.0"
azure-storage-blob = "^12.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
