[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jcalz23 <j.calzaretta.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^1.5.3"
numpy = "1.23.5"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"
google = "^3.0.0"
google-api-python-client = "^2.75.0"
google-auth-oauthlib = "^0.8.0"
azure-storage-blob = "^12.14.1"
tqdm = "^4.64.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"
#scipy = { version = "^1.10.0", python = ">=3.10" }
scipy = "^1.10.0"
scikit-learn = "<1.2"
requires-io = "^0.2.6"
geopandas = "^0.12.2"
pyspark = "^3.3.1"
pyarrow = "^11.0.0"
plotly = "^5.13.0"
torch = "^1.13.1"
pytorch-lightning = "1.9.0"
pytorch-forecasting = "^0.10.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
